tests/ui/missing_comma.stderr
error: expected type, found `""`
 --> $DIR/missing_comma.rs:4:18
  |
4 |     json!({ "1": "" "2": "" });
  |                - ^^ expected type
  |                |
  |                tried to parse a type due to this type ascription
  |
  = note: `#![feature(type_ascription)]` lets you annotate an expression with a type: `<expr>: <type>`
  = note: see issue #23416 <https://github.com/rust-lang/rust/issues/23416> for more information
