tests/ui/missing_comma.rs
use sciformats_serde_json::json;

fn main() {
    json!({ "1": "" "2": "" });
}
